# kuberT

./: .env.example  .gitignore  ADD_LESSON.md  CLAUDE.md  LESSON_REVIEW_MAP.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
lessons/01-introduction/: 01-overview.yaml  02-why-kubernetes.yaml  03-key-concepts.yaml  04-alternatives.yaml
lessons/02-containers/: 01-what-is-a-container.yaml  02-container-vs-vm.yaml  03-docker-for-k8s.yaml
lessons/03-setting-up/: 01-local-cluster-with-kind.yaml  02-first-kubectl.yaml  03-first-app.yaml
lessons/04-running-apps/: 01-pods.yaml  02-replicasets.yaml  03-deployments.yaml  04-statefulsets.yaml  05-jobs.yaml
lessons/05-configuration/: 01-configmaps.yaml  02-secrets.yaml
lessons/06-services-networking/: 01-services-basics.yaml  02-external-access.yaml  03-helm-basics.yaml  03-loadbalancer.yaml  04-loadbalancer.yaml  04-pod-to-pod.yaml  05-pod-to-pod.yaml
lessons/07-security/: 01-rbac.yaml  02-network-policies.yaml  03-pod-security.yaml
lessons/08-resources/: 01-requests-limits.yaml  02-namespaces-quotas.yaml  03-optimize-usage.yaml
lessons/09-observability/: 01-logs.yaml  02-metrics.yaml  03-traces.yaml  04-health.yaml  05-tools.yaml
lessons/10-storage/: 01-volumes-basics.yaml  (+2 more)
tests/: test_app.py  test_cheat_screen.py  test_checker.py  test_clipboard.py  test_cluster.py  test_cluster_screens.py  test_lesson_loader.py  test_lesson_review_fields.py  test_lesson_screens.py  test_markdown_blocks.py  test_prereq.py  test_quiz_screen.py  test_runner.py  test_shell.py  test_state.py
(+36 files in other folders)
